--- a/product5.css
+++ b/product5.css
@@ -108,6 +108,7 @@ span{
     height: 40px;
 }
 
+
 .product-heading{
     width: 100%;
     height: 100px;
@@ -136,16 +137,16 @@ span{
 }
 .product-picture {
     width: 50%;
+    height: 500px;
+    display: flex;
 }
 .product-picture img {
     border-radius: 15px;
-    /* padding: 3rem; */
-    padding-top: 0%;
     box-shadow: 0px 0px 10px rgba(66, 66, 66, 0.1);
 }
 .product-detail-body{
     width: 50%;
-    margin-left: 5rem;
+    margin-left: 2rem;
 }
 .product-detail-body .product-title{
     font-size: 25px;
